# kinova_robot

./: README.md  rl_dependencies.repos  simulation_dependencies.repos
kortex_api/: CMakeLists.txt  package.xml
kortex_bringup/: CMakeLists.txt  package.xml
kortex_bringup/launch/: gen3_rl_control.launch.py  gen3_sim_control.launch.py
kortex_description/: CMakeLists.txt  package.xml
kortex_description/gen3_arm/config/: ros2_controllers.yaml
kortex_description/gen3_arm/urdf/: gen3_macro.xacro  kortex.ros2_control.xacro
kortex_description/gripper_robotiq_2f_85/urdf/: robotiq_2f_85_macro.xacro
kortex_description/robots/: gen3.xacro  gen3_sim.xacro
kortex_driver/: CMakeLists.txt  package.xml
kortex_driver/include/kortex_driver/: hardware_interface.hpp  kortex_math_util.hpp
kortex_driver/src/: hardware_interface.cpp  kortex_math_util.cpp
