<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kortex_driver</name>
  <version>0.1.0</version>
  <description>ROS2 driver package for the Kinova Robot Hardware</description>
  <maintainer email="robotogeddon@gmail.com">Abed</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend> <!-- Build this package with ament_cmake-->

  <depend>hardware_interface</depend>
  <depend>kortex_api</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type> <!--Declares to ROS ecosystem the build type for dependent packages-->
  </export>
</package>
